--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
 
         <footer class="footer">
-            <p>&copy; 2024 Книжный компас. Все права защищены.</p>
+            <p>&copy; 2024 Книжный компас. А те, кто делали этот проект - крутышки:)</p>
         </footer>
         
         
