--- a/article.html
+++ b/article.html
@@ -8,20 +8,22 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #fdfaf7;
+            background-color: var(--bg-color);
             margin: 0;
             padding: 0;
         }
+
         .page-wrapper {
             padding: 20px;
         }
+
         .filter-modal {
             position: fixed;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
             width: 300px;
-            background-color: #d9ecf2;
+            background-color: var(--header-bg-color);
             padding: 20px;
             border-radius: 8px;
             display: none;
@@ -29,121 +31,88 @@
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             font-size: 22px;
         }
+
         .filter-modal button {
             margin-top: 20px;
             font-size: 22px;
         }
+
         .content-container {
             width: 100%;
         }
+
         .content-card {
             display: flex;
             margin-bottom: 20px;
             padding: 15px;
-            background-color: #fff;
+            background-color: var(--bg-color);
             border: 1px solid #ddd;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
+
         .content-card img {
             width: 180px;
             height: 180px;
             margin-right: 15px;
             border-radius: 8px;
-            background-color: #3b5f78;
-            color: #fff;
+            background-color: var(--item-bg-color);
+            color: var(--item-text-color);
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 14px;
             font-weight: bold;
         }
+
         .content-details {
             flex: 1;
         }
+
         .content-details h3 {
             margin: 0;
             font-size: 28px;
+            color: var(--text-color);
         }
+
         .content-details p {
             margin: 10px 0;
-            color: #555;
+            color: var(--text-color);
             font-size: 22px;
         }
-        .filter-button {
-            margin-bottom: 10px;
-            padding: 10px 20px;
-            background-color: #3b5f78;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 24px;
-            margin-left: 10px;
-        }
-        .filter-button:hover {
-            background-color: #567c8d;
-        }
-        .close-button {
-            display: block;
-            margin-bottom: 10px;
-            padding: 10px;
-            background-color: #ff6b6b;
-            color: #fff;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            text-align: center;
-        }
-        .close-button:hover {
-            background-color: #ff4d4d;
-        }
-        .filter-modal {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 300px;
-            background-color: #d9ecf2;
-            padding: 20px;
-            border-radius: 8px;
-            display: none;
-            z-index: 10;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            font-size: 22px;
-        }
-        .filter-modal button {
-            margin-top: 20px;
-            font-size: 22px;
-        }
+
         .filters-button {
             margin-bottom: 10px;
             padding: 10px 20px;
-            background-color: #3b5f78;
-            color: #fff;
+            background-color: var(--button-bg-color);
+            color: var(--button-text-color);
             border: none;
             border-radius: 8px;
             cursor: pointer;
             font-size: 24px;
             margin-left: 10px;
         }
-        .filters-button:hover {
-            background-color: #567c8d;
+
+        .filter-button:hover {
+            background-color: var(--button-hover-bg-color);
         }
+
         .close-button {
             display: block;
             margin-bottom: 10px;
             padding: 10px;
-            background-color: #ff6b6b;
-            color: #fff;
+            background-color: var(--button-bg-color);
+            color: var(--footer-text-color);
             border: none;
             border-radius: 8px;
             cursor: pointer;
             text-align: center;
         }
+
         .close-button:hover {
-            background-color: #ff4d4d;
+            background-color: var(--button-hover-bg-color);
         }
+
     </style>
 </head>
 <body>    
@@ -160,7 +129,7 @@
                 <li><a href="./book.html">Книги</a></li>
                 <li><a href="./journal.html">Журналы</a></li>
                 <li><a href="./article.html">Статьи</a></li>
-                <button>Версия для слабовидящих</button>
+                <button id="theme-toggle-button">Версия для слабовидящих</button>
             </ul>
         </div>
         
@@ -250,6 +219,52 @@
 
         // Display all articles initially
         filterArticles();
+
+
+        // Функция для переключения темы
+        const themeToggleButton = document.getElementById('theme-toggle-button');
+        const body = document.body;
+
+        themeToggleButton.addEventListener('click', () => {
+            body.classList.toggle('dark-theme');
+            // Сохранение состояния темы в localStorage
+            if (body.classList.contains('dark-theme')) {
+                localStorage.setItem('theme', 'dark');
+            } else {
+                localStorage.setItem('theme', 'light');
+            }
+        });
+
+        // Установка сохраненной темы при загрузке страницы
+        window.addEventListener('load', () => {
+            const savedTheme = localStorage.getItem('theme');
+            if (savedTheme === 'dark') {
+                body.classList.add('dark-theme');
+            } else {
+                body.classList.remove('dark-theme');
+            }
+        });
+
+        // Функции для открытия и закрытия модального окна фильтра
+        const filterModal = document.querySelector('.filter-modal');
+        const filterButton = document.querySelector('.filter-button');
+        const closeModalButton = document.querySelector('.close-button');
+
+        filterButton.addEventListener('click', () => {
+            filterModal.style.display = 'block';
+        });
+
+        closeModalButton.addEventListener('click', () => {
+            filterModal.style.display = 'none';
+        });
+
+        // Закрытие модального окна при клике за его пределами
+        window.addEventListener('click', (event) => {
+            if (event.target === filterModal) {
+                filterModal.style.display = 'none';
+            }
+        });
+
     </script>
 </body>
 </html>
