--- a/article.html
+++ b/article.html
@@ -102,7 +102,7 @@
             margin-bottom: 10px;
             padding: 10px;
             background-color: var(--button-bg-color);
-            color: var(--footer-text-color);
+            color: var(--bg-color);
             border: none;
             border-radius: 8px;
             cursor: pointer;
