--- a/article.html
+++ b/article.html
@@ -23,7 +23,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             width: 300px;
-            background-color: var(--header-bg-color);
+            background-color: var(--bg-color);
             padding: 20px;
             border-radius: 8px;
             display: none;
