--- a/book.html
+++ b/book.html
@@ -499,7 +499,7 @@
             },
             {
                 title: "Заплатка",
-                author: "Николай Носov",
+                author: "Николай Носoв",
                 year: 1941,
                 genre: "Рассказ",
                 description: "Бобка гордится своими штанами, но рвет их, что учит его бережливости и самостоятельности.",
